# fsw25

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  shell.nix
.github/scripts/: run-all.sh
.github/workflows/: ci.yml
src/: Blink.lf  Failover.lf  FlightController.lf  FlightControllerReal.lf  FlightControllerTest.lf  Forwarder.lf  HelloPico.lf  LedController.lf  RedundantNode.lf  SensorTest.lf  SensorTestUnix.lf  TestFed.lf  Timer.lf  common.h
src/lib/: GpioPin.lf  Led.lf  Veml7700.lf
src/lib/mockup/: GpioPin.lf  Veml7700.lf
